--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-time-slider",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "homepage": "https://github.com/FCOO/leaflet-time-slider",
   "authors": [
     "Niels Holt nho@fcoo.dk"
@@ -19,7 +19,7 @@
     "jquery": "~2.1.4",
     "font-awesome": "fontawesome#~4.4.0",
     "jquery-time-slider": "fcoo/jquery-time-slider#latest",
-    "leaflet-control-box": "fcoo/leaflet-control-box#~1.0.2"
+    "leaflet-control-box": "fcoo/leaflet-control-box#latest"
   },
   "devDependencies": {
     "bourbon": "latest",
