--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-time-slider",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "homepage": "https://github.com/FCOO/leaflet-time-slider",
   "authors": [
     "Niels Holt nho@fcoo.dk"
@@ -17,9 +17,9 @@
   "dependencies": {
     "leaflet": "latest",
     "jquery": "latest",
-    "font-awesome": "fontawesome#~4.4.0",
     "jquery-time-slider": "fcoo/jquery-time-slider#latest",
-    "leaflet-control-box": "fcoo/leaflet-control-box#latest"
+    "leaflet-control-box": "fcoo/leaflet-control-box#latest",
+    "fcoo-fontawesome": "fcoo/fcoo-fontawesome#^1.0.0"
   },
   "devDependencies": {
     "bourbon": "latest",
