--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,13 @@
 {
   "name": "leaflet-time-slider",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "homepage": "https://github.com/FCOO/leaflet-time-slider",
   "authors": [
     "Niels Holt nho@fcoo.dk"
   ],
   "description": "",
   "main": [
-    "dist/leaflet-time-slider.min.js",
-    "dist/leaflet-time-slider.min.css"
+    "dist/leaflet-time-slider.min.js"
   ],
   "repository": {
     "type": "git",
@@ -20,6 +19,13 @@
     "jquery-time-slider": "fcoo/jquery-time-slider#latest",
     "leaflet-control-box": "fcoo/leaflet-control-box#latest",
     "fcoo-fontawesome": "fcoo/fcoo-fontawesome#^1.0.0"
+  },
+  "overrides": {
+    "jquery-autoclick-while-pressed": {
+      "main": [
+        "autoclick-while-pressed.js"
+      ]
+    }
   },
   "devDependencies": {
     "bourbon": "latest",
