--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "leaflet-time-slider",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "homepage": "https://github.com/FCOO/leaflet-time-slider",
   "authors": [
     "Niels Holt nho@fcoo.dk"
   ],
   "description": "",
   "main": [
-    "dist/leaflet-time-slider.min.js"
+    "dist/leaflet-time-slider.js"
   ],
   "repository": {
     "type": "git",
@@ -17,8 +17,7 @@
     "leaflet": "latest",
     "jquery": "latest",
     "jquery-time-slider": "fcoo/jquery-time-slider#latest",
-    "leaflet-control-box": "fcoo/leaflet-control-box#latest",
-    "fcoo-fontawesome": "fcoo/fcoo-fontawesome#^1.0.0"
+    "leaflet-control-box": "fcoo/leaflet-control-box#^1.2.0"
   },
   "devDependencies": {
     "bourbon": "latest",
