--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-time-slider",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "homepage": "https://github.com/FCOO/leaflet-time-slider",
   "authors": [
     "Niels Holt nho@fcoo.dk"
@@ -16,8 +16,8 @@
   "dependencies": {
     "leaflet": "latest",
     "jquery": "latest",
-    "jquery-time-slider": "fcoo/jquery-time-slider#~4.0.0",
-    "leaflet-control-box": "fcoo/leaflet-control-box#^1.2.0"
+    "jquery-time-slider": "fcoo/jquery-time-slider#^4.0.0",
+    "leaflet-control-box": "fcoo/leaflet-control-box#^2.0.0"
   },
   "devDependencies": {
     "bourbon": "latest",
