--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "jquery" : true
+        "jquery" : true,
+        "es6"    : true
     },
 
     "extends": "eslint:recommended",
@@ -13,6 +14,7 @@
         "moment"    : false,
         "Raven"     : false
     },
+
     "rules": {
         "strict"                  : "error",
         "camelcase"               : "off",
